--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src= "images/1.png" width="100%">
-<img src= "images/2.png" width="100%">
-<img src= "images/3.png" width="100%">
-<img src= "images/4.png" width="100%">
-<img src= "images/5.png" width="100%">
-<img src= "images/6.png" width="100%">
-<img src= "images/7.png" width="100%">
-<img src= "images/8.png" width="100%">
-<img src= "images/9.png" width="100%">
+<img src= "1.png" width="100%">
+<img src= "2.png" width="100%">
+<img src= "3.png" width="100%">
+<img src= "4.png" width="100%">
+<img src= "5.png" width="100%">
+<img src= "6.png" width="100%">
+<img src= "7.png" width="100%">
+<img src= "8.png" width="100%">
+<img src= "9.png" width="100%">
 </body>
 </html> 
